{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 72,
  "lineage": "05f6a310-e5bd-05aa-9854-fc972f5c928c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:731186690746:loadbalancer/app/node-js-app-production-alb/e7416298fe54983e",
            "arn_suffix": "app/node-js-app-production-alb/e7416298fe54983e",
            "dns_name": "node-js-app-production-alb-1107758.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:731186690746:loadbalancer/app/node-js-app-production-alb/e7416298fe54983e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "node-js-app-production-alb",
            "security_groups": [
              "sg-0a61cc8326316c70e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0497c60012b124b88"
              },
              {
                "subnet_id": "subnet-0b57dca05f4558532"
              }
            ],
            "subnets": [
              "subnet-0497c60012b124b88",
              "subnet-0b57dca05f4558532"
            ],
            "tags": {
              "Environment": "production",
              "Name": "node-js-app-alb"
            },
            "vpc_id": "vpc-02b9ae5950e7295dc",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731186690746:internet-gateway/igw-0fb768c297cbe9be3",
            "id": "igw-0fb768c297cbe9be3",
            "owner_id": "731186690746",
            "tags": {
              "Environment": "production",
              "Name": "node-js-app-igw"
            },
            "vpc_id": "vpc-02b9ae5950e7295dc"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:731186690746:listener/app/node-js-app-production-alb/e7416298fe54983e/bdf2e123deebee88",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:731186690746:targetgroup/node-js-app-production-tg/c10c7f0051c05449",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:731186690746:listener/app/node-js-app-production-alb/e7416298fe54983e/bdf2e123deebee88",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:731186690746:loadbalancer/app/node-js-app-production-alb/e7416298fe54983e",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:731186690746:targetgroup/node-js-app-production-tg/c10c7f0051c05449",
            "arn_suffix": "targetgroup/node-js-app-production-tg/c10c7f0051c05449",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200",
                "path": "/v1/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:731186690746:targetgroup/node-js-app-production-tg/c10c7f0051c05449",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "node-js-app-production-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "node-js-app-lb-tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-02b9ae5950e7295dc"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731186690746:security-group/sg-0a61cc8326316c70e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a61cc8326316c70e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221214102847541200000002",
            "name_prefix": null,
            "owner_id": "731186690746",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "node-js-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b9ae5950e7295dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731186690746:security-group/sg-03fbeff10cf17f7b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03fbeff10cf17f7b5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a61cc8326316c70e"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a61cc8326316c70e"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "terraform-20221214102855619400000003",
            "name_prefix": null,
            "owner_id": "731186690746",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "node-js-app-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b9ae5950e7295dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731186690746:subnet/subnet-0b57dca05f4558532",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.100.0/24",
            "id": "subnet-0b57dca05f4558532",
            "map_public_ip_on_launch": true,
            "owner_id": "731186690746",
            "tags": {
              "Environment": "production",
              "Name": "node-js-app-public-subnet-1"
            },
            "vpc_id": "vpc-02b9ae5950e7295dc"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731186690746:subnet/subnet-0497c60012b124b88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.101.0/24",
            "id": "subnet-0497c60012b124b88",
            "map_public_ip_on_launch": true,
            "owner_id": "731186690746",
            "tags": {
              "Environment": "production",
              "Name": "node-js-app-public-subnet-2"
            },
            "vpc_id": "vpc-02b9ae5950e7295dc"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731186690746:vpc/vpc-02b9ae5950e7295dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-046a3dae1ddaf078c",
            "default_route_table_id": "rtb-0600fb0a7cbbf30b0",
            "default_security_group_id": "sg-01754735fe903efee",
            "dhcp_options_id": "dopt-0e6b475e471619156",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02b9ae5950e7295dc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0600fb0a7cbbf30b0",
            "owner_id": "731186690746",
            "tags": {
              "Environment": "production",
              "Name": "node-js-app-vpc"
            }
          }
        }
      ]
    }
  ]
}